--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+html {
+	height: 100%;
+}
+
 body {
 	font: 14px "Century Gothic", Futura, sans-serif;
-	margin: 20px;
+	height: 100%;
+	margin: 0px;
 }
 
 ol, ul {
@@ -21,19 +26,31 @@ ol, ul {
 	background: #fff;
 	border: 1px solid #999;
 	float: left;
-	font-size: 24px;
+	font-size: 40px;
 	font-weight: bold;
-	line-height: 34px;
-	height: 34px;
+	line-height: 54px;
+	height: 54px;
 	margin-right: -1px;
 	margin-top: -1px;
 	padding: 0;
 	text-align: center;
-	width: 34px;
+	width: 54px;
 }
 
 .square:focus {
 	outline: none;
+}
+
+.square:hover {
+	background-color: lightblue;
+}
+
+.played:hover, .empty:hover {
+	background-color: white;
+}
+
+.winner:hover {
+	background-color: green;
 }
 
 .kbd-navigation .square:focus {
@@ -46,9 +63,21 @@ ol, ul {
 }
 
 .game-info {
-	margin-left: 20px;
+}
+
+.game-board {
 }
 
 .winner {
-	background-color: red;
+	background-color: green;
+}
+
+#root {
+	position: relative;
+	height: 100%;
+	text-align: center;
+}
+
+.moves {
+	display: block;
 }
